--- a/package.json
+++ b/package.json
@@ -21,12 +21,7 @@
     },
     "dependencies": {
         "bootstrap-select": "^1.12.4",
-        "express": "^4.16.1",
-        "ioredis": "^3.1.4",
         "laravel-echo": "^1.3.2",
-        "laravel-echo-server": "^1.3.1",
-        "pusher-js": "^4.1.0",
-        "socket.io": "^2.0.3",
-        "socket.io-client": "^2.0.3"
+        "pusher-js": "^4.1.0"
     }
 }
