--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dependencies": {
         "bootstrap-select": "^1.12.4",
         "laravel-echo": "^1.3.2",
-        "pusher-js": "^4.2.1"
+        "pusher-js": "^4.2.1",
+        "vue-notification": "^1.3.4",
+        "vue-snotify": "^2.0.3"
     }
 }
