rebase to bootstrap 4

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/bootstrap-native-v4.min.js": "/js/bootstrap-native-v4.min.js",
+    "/js/polyfill.min.js": "/js/polyfill.min.js"
 }
