--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
     },
     "devDependencies": {
         "axios": "^0.16.2",
-        "bootstrap-sass": "^3.3.7",
-        "cross-env": "^5.0.1",
-        "jquery": "^3.1.1",
-        "laravel-mix": "^1.0",
+        "bootstrap": "^4.0.0-beta",
+        "bootstrap.native": "^2.0.14",
+        "cross-env": "^5.1.0",
+        "jquery": "^3.2.1",
+        "laravel-mix": "^1.5.0",
         "lodash": "^4.17.4",
-        "vue": "^2.1.10"
+        "popper.js": "^1.11.0",
+        "precss": "^2.0.0",
+        "vue": "^2.5.2"
     },
     "dependencies": {
         "bootstrap-select": "^1.12.4",
         "laravel-echo": "^1.3.2",
         "pusher-js": "^4.2.1",
-        "vue-notification": "^1.3.4",
-        "vue-snotify": "^2.0.3"
+        "vue-notification": "^1.3.4"
     }
 }
