--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.16.2",
-        "bootstrap": "^4.0.0-beta",
-        "bootstrap.native": "^2.0.14",
-        "cross-env": "^5.1.0",
+        "axios": "^0.17.0",
+        "bootstrap": "^4.0.0-beta.2",
+        "bootstrap.native": "^2.0.18",
+        "cross-env": "^5.1.1",
         "jquery": "^3.2.1",
-        "laravel-mix": "^1.5.0",
+        "laravel-mix": "^1.5.1",
         "lodash": "^4.17.4",
-        "popper.js": "^1.11.0",
+        "popper.js": "^1.12.6",
         "precss": "^2.0.0",
         "vue": "^2.5.2"
     },
