--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/bootstrap-native-v4.min.js": "/js/bootstrap-native-v4.min.js",
-    "/js/polyfill.min.js": "/js/polyfill.min.js"
+    "/css/app.css": "/css/app.css"
 }
