--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "pusher/pusher-php-server": "^3.0",
-        "spatie/laravel-migrate-fresh": "^1.5"
+        "spatie/laravel-migrate-fresh": "^1.5",
+        "fzaninotto/faker": "~1.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~6.0",
         "softquantum/laravel-preset-bootstrap4": "^1.0"
