--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/vendor.js": "/js/vendor.js?id=479679b0d277beeab895",
+    "/js/app.js": "/js/app.js?id=720412d269069cbd2a73",
+    "/css/app.css": "/css/app.css?id=78779e6f25bb3f548356",
+    "/js/manifest.js": "/js/manifest.js?id=6385c3f8adc995517239"
 }
