fix errors, add questions

--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "HighSolutions/eloquent-sequence": "1.*",
         "barryvdh/laravel-ide-helper": "^2.4",
         "doctrine/dbal": "^2.6",
+        "fabpot/goutte": "^3.2",
         "fideloper/proxy": "~3.3",
-        "HighSolutions/eloquent-sequence": "1.*",
+        "fzaninotto/faker": "~1.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "pusher/pusher-php-server": "^3.0",
-        "spatie/laravel-migrate-fresh": "^1.5",
-        "fzaninotto/faker": "~1.4"
+        "spatie/laravel-migrate-fresh": "^1.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
