--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
-    "cross-env": "^5.1.1",
-    "laravel-mix": "^1.6.1",
-    "axios": "^0.17.0",
+    "axios": "^0.17.1",
     "bootstrap": "^4.0.0-beta.2",
+    "cross-env": "^5.1.1",
     "jquery": "^3.2.1",
     "laravel-echo": "^1.3.2",
+    "laravel-mix": "^1.6.1",
     "lodash": "^4.17.4",
-    "popper.js": "^1.12.6",
+    "popper.js": "^1.13.0",
     "pusher-js": "^4.2.1",
-    "vue": "^2.5.3",
-    "vue-notification": "^1.3.4"
+    "vue": "^2.5.5",
+    "vue-notification": "^1.3.4",
+    "vue-template-compiler": "^2.5.5"
   }
 }
