--- a/composer.json
+++ b/composer.json
@@ -5,24 +5,24 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
-        "HighSolutions/eloquent-sequence": "1.*",
+        "php": ">=7.2.0",
+        "HighSolutions/eloquent-sequence": "^1.0",
         "barryvdh/laravel-ide-helper": "^2.4",
         "doctrine/dbal": "^2.6",
         "fabpot/goutte": "^3.2",
-        "fideloper/proxy": "~3.3",
-        "fzaninotto/faker": "~1.4",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
+        "fideloper/proxy": "^4.0",
+        "fzaninotto/faker": "^1.4",
+        "laravel/framework": "^5.7",
+        "laravel/tinker": "^1.0",
         "pusher/pusher-php-server": "^3.0",
-        "spatie/laravel-migrate-fresh": "^1.5"
+        "spatie/laravel-migrate-fresh": "^1.5",
+        "ext-json": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
-        "filp/whoops": "~2.0",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0",
-        "softquantum/laravel-preset-bootstrap4": "^1.0"
+        "filp/whoops": "^2.0",
+        "mockery/mockery": "^1.2",
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
