--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
-    "axios": "^0.17.1",
-    "bootstrap": "^4.0.0-beta.2",
-    "cross-env": "^5.1.1",
-    "jquery": "^3.2.1",
-    "laravel-echo": "^1.3.2",
-    "laravel-mix": "^1.6.1",
-    "lodash": "^4.17.4",
-    "popper.js": "^1.13.0",
-    "pusher-js": "^4.2.1",
-    "vue": "^2.5.5",
-    "vue-notification": "^1.3.4",
-    "vue-template-compiler": "^2.5.5"
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "cross-env": "^5.2.0",
+    "jquery": "^3.3.1",
+    "laravel-echo": "^1.5.1",
+    "laravel-mix": "^4.0.0-beta.2",
+    "lodash": "^4.17.11",
+    "popper.js": "^2.0.0-next.4",
+    "pusher-js": "^4.3.1",
+    "vue": "^2.5.17",
+    "vue-notification": "^1.3.13",
+    "vue-template-compiler": "^2.5.17"
   }
 }
