--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/vendor.js": "/js/vendor.js?id=f653ab3373122fa9ff26",
-    "/js/app.js": "/js/app.js?id=3f5d575adcd520a83d08",
-    "/css/app.css": "/css/app.css?id=78779e6f25bb3f548356",
-    "/js/manifest.js": "/js/manifest.js?id=6385c3f8adc995517239"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/manifest.js": "/js/manifest.js",
+    "/js/vendor.js": "/js/vendor.js"
 }
