--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "lodash": "^4.17.11",
     "popper.js": "^2.0.0-next.4",
     "pusher-js": "^4.3.1",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.5.17",
     "vue-notification": "^1.3.13",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "vuex": "^3.0.1"
   }
 }
