--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --optimize --optimize-minimize --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -15,14 +15,20 @@
     "cross-env": "^5.2.0",
     "jquery": "^3.3.1",
     "laravel-echo": "^1.5.1",
-    "laravel-mix": "^4.0.0-beta.2",
+    "laravel-mix": "^4.0.12",
     "lodash": "^4.17.11",
-    "popper.js": "^2.0.0-next.4",
+    "popper.js": "^1.14.6",
     "pusher-js": "^4.3.1",
     "socket.io-client": "^2.2.0",
+    "uglify-js": "^3.4.9",
     "vue": "^2.5.17",
     "vue-notification": "^1.3.13",
     "vue-template-compiler": "^2.5.17",
     "vuex": "^3.0.1"
+  },
+  "devDependencies": {
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0"
   }
 }
