--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": ">=7.2.0",
         "ext-json": "*",
+        "ext-pdo": "*",
+        "ext-pdo_sqlite": "*",
         "HighSolutions/eloquent-sequence": "^1.0",
         "barryvdh/laravel-ide-helper": "^2.4",
         "doctrine/dbal": "^2.6",
