--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "bootstrap-select": "^1.13.5",
     "cross-env": "^5.2.0",
+    "es6-promise": "^4.2.5",
     "jquery": "^3.3.1",
     "laravel-echo": "^1.5.1",
     "laravel-mix": "^4.0.12",
