--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.4",
         "laravel/framework": "^5.7",
+        "laravel/socialite": "^4.0",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^3.0",
-        "spatie/laravel-migrate-fresh": "^1.5"
+        "spatie/laravel-migrate-fresh": "^1.5",
+        "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
         "laravel/tinker": "^1.0",
