--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --optimize --optimize-minimize --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
+    "@websanova/vue-auth": "^2.21.14-beta",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
-    "bootstrap-select": "^1.13.5",
     "cross-env": "^5.2.0",
     "es6-promise": "^4.2.5",
     "jquery": "^3.3.1",
@@ -22,11 +22,14 @@
     "popper.js": "^1.14.6",
     "pusher-js": "^4.3.1",
     "socket.io-client": "^2.2.0",
-    "uglify-js": "^3.4.9",
     "vue": "^2.5.17",
+    "vue-axios": "^2.1.4",
     "vue-notification": "^1.3.13",
+    "vue-router": "^3.0.2",
+    "vue-select": "2.4.0",
     "vue-template-compiler": "^2.5.17",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "autoprefixer": "latest"
   },
   "devDependencies": {
     "resolve-url-loader": "^2.3.1",
